deploy/cube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubecube
  namespace: kubecube-system
  labels:
    kubecube.io/app: kubecube
spec:
  replicas: 1
  selector:
    matchLabels:
      kubecube.io/app: kubecube
  template:
    metadata:
      labels:
        kubecube.io/app: kubecube
    spec:
      containers:
        - name: kubecube
          image: hub.c.163.com/kubecube/kubecube:0.1.8-deploy
          securityContext:
            runAsUser: 0
            privileged: true
          args:
            - -log-level=debug
            - -secure-port=7443
            - -tls-cert=/etc/tls/tls.crt
            - -tls-key=/etc/tls/tls.key
            - -webhook-cert=/etc/tls
            - -webhook-server-port=9443
            - -leader-elect=true
          volumeMounts:
            - name: cube-tls
              mountPath: "/etc/tls"
              readOnly: true
      volumes:
        - name: cube-tls
          secret:
            secretName: cube-tls-secret
