deploy/localSvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubecube
  namespace: kubecube-system
spec:
  ports:
    - name: http
      protocol: TCP
      port: 7777
      targetPort: 7777
    - name: https
      protocol: TCP
      port: 7443
      targetPort: 7443
    - name: webhook
      port: 9443
      targetPort: 9443
---
apiVersion: v1
kind: Endpoints
metadata:
  name: kubecube
  namespace: kubecube-system
subsets:
  - addresses:
      #  mac    - ip: 10.242.68.57
      - ip: 10.219.192.164
    ports:
      - name: http
        port: 7777
      - name: https
        port: 7443
      - name: webhook
        port: 9443
