deploy/nodePortSvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubecube-nodeport
  namespace: kubecube-system
spec:
  type: NodePort
  selector:
    kubecube.io/app: kubecube
  ports:
    - name: http
      port: 7777
      targetPort: 7777
      nodePort: 30007
    - name: https
      port: 7443
      targetPort: 7443
      nodePort: 30443
