deploy/pivotSvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubecube
  namespace: kubecube-system
spec:
  selector:
    kubecube.io/app: kubecube
  ports:
    - name: http
      protocol: TCP
      port: 7777
      targetPort: 7777
    - name: https
      protocol: TCP
      port: 7443
      targetPort: 7443
    - name: webhook
      port: 9443
      targetPort: 9443
